syntax = "proto3";

package grades;

option go_package = "./proto;grades";

service Grades {
    rpc GetAllStudents (GetAllRequest) returns (StudentsReply) {}
    rpc GetOneStudent (IdRequest) returns (StudentReply) {}
    rpc AddGrade (GradeRequest) returns (GradesReply) {}
}


message GetAllRequest{
}

message IdRequest {
    int32 id = 1;
}

message GradeRequest {
    int32 id = 1;
    Grade grade = 2;
}

message Grade {
    string title =1;
    string 	type =2;
	float score =3;
}
message Student {

    int32 id =1;
    string firstName = 2;
    string lastName =3;
    repeated Grade grades = 4;
}
message StudentReply{
    //状态码
    int32 code = 1;
    //错误信息
    string msg = 2;
    Student data = 3;
}
message StudentsReply{
    //状态码
    int32 code = 1;
    //错误信息
    string msg = 2;
    repeated Student data = 3;
}

message GradesReply {
    //状态码
    int32 code = 1;
    //错误信息
    string msg = 2;
    Grade data = 3;
}